<resources>
    <string name="app_name">SoundMeter</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="save_recording">Save Recordings to Device</string>
    <string name="sound_recording_refresh_rate">Sound Recording Refresh Rate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome_to_the_sound_meter_app">Welcome to the Sound Meter App!</string>
    <string name="calibration_offset">Calibration offset</string>
    <string name="confirm">Confirm</string>
    <string name="calibration_key">calibration_key</string>
    <string name="first_start_key">first_start_key</string>
    <string name="chart">Live Chart</string>
    <string name="main_page">Control Page</string>
    <string name="info">Statistics</string>
    <string name="calibration_is_required_before_start">Calibration is required before start</string>
    <string name="start_recording">Start Recording</string>
    <string name="calibration_guide_string">1. Click on \'Start Recording\' button\n 2. Adjust slider until shown value is correct\n 3. Click on \'Confirm\' button when done</string>
    <string name="min_value">Min Value</string>
    <string name="max_value">Max Value</string>
    <string name="average_value">Average Value</string>
    <string name="current_value">Current Value</string>
    <string name="to_display_live_graph_switch_to_landscape_orientation">To display Live Chart, switch to landscape orientation</string>
    <string name="main_controls">Main Controls</string>
    <string name="app_calibration">App Calibration</string>
    <string name="volume_live_chart">Volume Live Chart</string>
    <string name="volume_statistics">Volume Statistics</string>
    <string name="volume_meter_app">Volume Meter App</string>
    <string name="notifications">Notifications</string>
    <string name="set_notification_for">Set Notification for</string>
    <string name="db">db</string>
    <string name="send_notification_when">Send notification when</string>
    <string name="maximum_value_is_above">Maximum value is above</string>
    <string name="minimum_value_is_bellow">Minimum value is bellow</string>
    <string name="above">above</string>
    <string name="bellow">bellow</string>
    <string name="average_value_is">Average value is</string>
    <string name="current_value_is">Current value is</string>
</resources>