<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="com.example.soundmeter.VolumeRecorderViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainFragment">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{vm.decibels.toString()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="10dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_recording"
            android:enabled="@{vm.saveToFileEnabled}"
            android:onClick="@{() -> vm.switchSaveToFile()}"
            android:layout_margin="4dp"
            app:layout_constraintBottom_toTopOf="@+id/recordingControlsLinearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/recordingControlsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:onClick="@{() -> vm.switchRecording()}"
                android:enabled="@{vm.startEnabled}"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/pauseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pause"
                android:onClick="@{() -> vm.switchRecording()}"
                android:enabled="@{vm.pauseEnabled}"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/stopButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop"
                android:onClick="@{() -> vm.stopRecording()}"
                android:enabled="@{vm.stopEnabled}"
                android:layout_margin="10dp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>