<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.example.soundmeter.viewmodels.InfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/maxValueLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp"
            android:text="@string/max_value"
            android:textSize="36sp"
            android:textColor="@color/red"/>

        <TextView
            android:id="@+id/maxValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/maxValueLabelTextView"
            android:text="@{vm.maxValue.toString()}"
            android:textSize="48sp"/>

        <TextView
            android:id="@+id/currentValueLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/maxValueTextView"
            android:layout_marginTop="80dp"
            android:text="@string/current_value"
            android:textSize="36sp"/>

        <TextView
            android:id="@+id/currentValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currentValueLabelTextView"
            android:layout_marginBottom="40dp"
            android:text="@{vm.currentValue.toString()}"
            android:textSize="48sp"/>

        <TextView
            android:id="@+id/avgValueLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/avgValueTextView"
            android:text="@string/average_value"
            android:textSize="36sp"
            android:textColor="@color/orange" />

        <TextView
            android:id="@+id/avgValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/minValueLabelTextView"
            android:layout_marginBottom="80dp"
            android:text="@{vm.averageValue.toString()}"
            android:textSize="48sp"/>

        <TextView
            android:id="@+id/minValueLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/minValueTextView"
            android:layout_marginTop="80dp"
            android:text="@string/min_value"
            android:textSize="36sp"
            android:textColor="@color/green"/>

        <TextView
            android:id="@+id/minValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="40dp"
            android:text="@{vm.minValue.toString()}"
            android:textSize="48sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>